--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 }
 .main{
     width: 100;
-    background: linear-gradient(to top,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(1.jpg);
+    background: linear-gradient(to top,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url('../images/1.jpg');
     background-position: center;
     background-size: cover;
     height: 109vh;
@@ -15,7 +15,9 @@
     width: 1200px;
     height: 75px;
     margin: auto;
+    display: flex;  
 }
+
 .icon{
     width: 200px;
     float: left;
@@ -62,7 +64,7 @@ ul li a:hover{
 .search{
     width: 330px;
     float: left;
-    margin-left: 900px;
+    padding-left: 51px;
 
 }
 .srch{
