--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@
     margin: auto;
     /* i add  the display flex to nav bar */
     display: flex;  
+
+        position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 0 !important ;
+    padding-bottom: 0 !important;
 }
 
 .icon{
@@ -61,11 +69,14 @@ ul li a {
 }
 ul li a:hover{
     color: #ff7200;
+  
 }
+
 .search{
     width: 330px;
     float: left;
     /* and add the padding to search */
+    padding:10px ;
     padding-left: 51px;
 
 }
@@ -75,6 +86,7 @@ ul li a:hover{
     height: 40px;
     background: transparent;
     border: 1px solid #ff7200;
+    color: #ffffff;
     display: flex ;
     margin-top: 13px;
     border-right: none;
@@ -83,7 +95,7 @@ ul li a:hover{
     padding: 10px;
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
-    
+   
 
 
 }
